# minimum-weight-triangulation

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md  conanfile.py  experiment_wrapper.py  improved_stretch17_mwt.json
experiments/01_exact_vs_inexact_with_gap/: 00_run_random_swap.py  01_run_experiments.py  03_analyze_unsuccessful.py  04_basic_instance_properties.py  05_analyze.ipynb  05a_successful_exact_solves.json  06_compare_exact_solutions.py  07_compared_exact_solutions.txt.bz2  08_compare_inexact_to_exact.py  09_compared_inexact_to_exact.jsonl.bz2  data_handling.py  long_sleep.sh  regpoly_293_inexact_run1.stdout.log.bz2  regpoly_293_inexact_run2.stdout.log.bz2  regpoly_293_inexact_run3.stdout.log.bz2  regpoly_293_inexact_run4.stdout.log.bz2  regpoly_293_inexact_run5.stdout.log.bz2
include/CGAL_MWT/: Are_all_collinear.h  CGAL_Rational_aux.h  Compare_weights.h  Crossing_free.h  Dead_sector.h  Diamond_filter.h  Directional_filter.h  Dynamic_program_utils.h  Exact_LP_face_triangulator.h  Exact_diamond_filtered_search_driver.h  Exact_simple_face_triangulator.h  Face_analyzer.h  Face_collector.h  Face_triangulator.h  Filtered_incremental_search.h  Generate_random_integral.h  Gurobi_LP_backend.h  Inexact_LP_face_triangulator_with_max_gap.h  Interval_set.h  Is_interval.h  LMT_halfedge.h  LMT_skeleton.h  LP_backends.h  Mutable_index_priority_queue.h  Mwt_traits.h  Neighbor_set.h  Null_LP_backend.h  Quadtree_aux.h  Rational_or_int.h  Rational_sparse_LU.h  Rational_sparse_gaussian.h  Rational_sparse_matrix.h  Read_instance.h  Resource_monitor.h  Scaled_weight_sign.h  Search_aux.h  Select_LP_backend.h  Static_quadtree.h  Total_weight.h  Triangle_based_linear_model.h  (+5 more)
src/: CMakeLists.txt  compare_triangulations.cpp  options.h  solve_mwt.cpp  verify_triangulation.cpp  version.cpp
test_package/: CMakeLists.txt  conanfile.py  debug_cover_cut_generator_data.cpp  test_cover_cut_generator.cpp  test_directional_filter.cpp  test_directional_filter_test1.ipe  test_exact_lp.cpp  test_face_collector.cpp  test_filtered_search.cpp  test_incremental_search.cpp  test_intersection_check.cpp  test_interval_face_triangulator.cpp  test_interval_set.cpp  test_lmt_skeleton.cpp  test_main.cpp  test_mutable_index_pq.cpp  test_mwt_traits.cpp  test_number_types.cpp  test_rational_or_int.cpp  test_rational_sparse_matrix.cpp  test_read_instance.cpp  test_scaled_weight_sign.cpp  test_sparse_lu.cpp  test_static_quadtree.cpp
